fix link readability

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ p, strong, ul, li {
   font-family: "Times New Roman", "Arial";
 }
 
+i a {
+  color: lightblue;
+  text-shadow: 0.5em 0.5em 0.5em rgba(192, 192, 255, 0.25);
+}
+
 p {
   font-size: 1.5em;
 }
